# grpc-rendezvous

./: Makefile  go.mod  go.sum
cmd/client/: client.go
cmd/dialer/: dialer.go
cmd/listener/: listener.go
cmd/rendezvous/: rendezvous.go
cmd/server/: server.go
go/: go.mod  go.sum
go/cmd/client/: client.go
go/cmd/exporter/: exporter.go
go/cmd/rendezvous/: rendezvous.go
go/cmd/server/: server.go
go/pkg/server/: server.go
go/pkg/stream/: forward.go
go/pkg/token/: token.go
pkg/server/: server.go
pkg/stream/: forward.go
proto/: rendezvous.pb.go  rendezvous.proto  rendezvous_grpc.pb.go
python/: pyproject.toml
python/grpc_rendezvous/: __init__.py  client.py  server.py  stream.py
